<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.oillak.hemomeds.MainActivity"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_screen"
        android:id="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:autoText="false"
        android:editable="false"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileList"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:choiceMode="singleChoice"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="128dp"
        android:layout_marginRight="32dp"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:background="@color/background_material_light" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_button_text"
        android:id="@+id/continue_button"
        android:hint="@string/continue_button_mainmenu"
        android:shadowColor="@android:color/holo_red_dark"
        android:layout_alignBottom="@+id/add_button"
        android:layout_toStartOf="@+id/add_button"
        android:layout_alignTop="@+id/add_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:id="@+id/add_button"
        android:hint="@string/add_button_hint"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginTop="19dp" />

</RelativeLayout>
