<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout tools:context="com.oillak.hemomeds.MainActivity"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@android:color/white"
        android:layout_gravity="center_horizontal">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:choiceMode="singleChoice"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="128dp"
            android:layout_marginRight="32dp"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:background="@color/background_material_light" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/Haemmorhage"
            android:layout_alignTop="@+id/Haemmorhage"
            android:layout_toStartOf="@+id/Haemmorhage"
            android:hint="@string/continue_button_mainmenu"
            android:onClick="AddMed"
            android:shadowColor="@android:color/holo_red_dark"
            android:text="@string/new_med_button" />

        <TextView
            android:id="@+id/patientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:autoText="false"
            android:editable="false"
            android:text="Patient name"
            android:textColor="@android:color/holo_red_light"
            android:textSize="24dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haemorrhage_button"
            android:id="@+id/Haemmorhage"
            android:hint="@string/add_button_hint"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/patientName"
            android:layout_toEndOf="@+id/patientName" />
    </RelativeLayout>
</LinearLayout>